// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-media-folder should create a folder at root level 1`] = `
{
  "content": [
    {
      "text": "Media folder "_Test Folder Created" created successfully",
      "type": "text",
    },
  ],
}
`;

exports[`create-media-folder should create a folder inside another folder 1`] = `
{
  "content": [
    {
      "text": "Media folder "_Test Nested Folder" created successfully",
      "type": "text",
    },
  ],
}
`;

exports[`create-media-folder should handle non-existent parent ID 1`] = `
{
  "content": [
    {
      "text": "Error creating media folder: Request failed with status code 404",
      "type": "text",
    },
  ],
  "isError": true,
}
`;
